[#0] - Move hello template inside hello component.

--- a/app/components/hello/hello.html
+++ b/app/components/hello/hello.html
@@ -1,1 +1,4 @@
-<div>{{ $ctrl.name }} love {{ $ctrl.girlFriend }}!</div>
+<div>
+    <div>{{ $ctrl.name }} love {{ $ctrl.girlFriend }}!</div>
+    <button ng-click="$ctrl.sayHi()">Hello</button>
+</div>
