--- a/app/components/note/note.html
+++ b/app/components/note/note.html
@@ -1,9 +1,14 @@
 <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12 aside visible-md visible-lg">
     <div class="row navside">
-        <aside1 selected-category="$ctrl.selectedCategory" categories="$ctrl.index.categories" site-config="$ctrl.siteConfig"></aside1>
-        <div class="col-md-9 col-xs-9 aside2 row navside2 tab-content">
-            <aside2 selected-category="$ctrl.selectedCategory" posts="$ctrl.selectedPosts">
-            </aside2>
+        <aside1 selected-category="$ctrl.selectedCategory" categories="$ctrl.index.categories"
+                site-config="$ctrl.siteConfig"></aside1>
+        <div class="col-md-9 col-xs-9 aside2">
+            <div class="row navside2">
+                <div class="tab-content">
+                    <aside2 selected-category="$ctrl.selectedCategory" posts="$ctrl.selectedPosts">
+                    </aside2>
+                </div>
+            </div>
         </div>
     </div>
 </div>
