--- a/style/base.css
+++ b/style/base.css
@@ -1,145 +1,180 @@
 /* 页面配置 */
 .container {
-  width: 100%;
-  height: 100%;
+    margin-top: 60px;
+    width: 100%;
+    height: 100%;
 }
+
 body, html {
-  margin: 0px;
-  height: 100%;
-  /*overflow: hidden; */
-  background-color: #EAEDEF;
+    margin: 0px;
+    height: 100%;
+    overflow: hidden;
+    background-color: #EAEDEF;
 }
+
 .row {
-  margin-top: 0px;
-  height: 100%;
+    margin-top: 0px;
+    height: 100%;
 }
+
 /* 导航栏 + 目录栏 */
 .aside {
-  height: 100%;
+    height: 100%;
 }
+
 .navside {
-  margin-top: 0px;
-  font-weight: 300;
+    margin-top: 0px;
+    font-weight: 300;
 }
+
 /* 左侧导航栏 */
 .aside1 {
-  /*background-color: #1f2c39;*/
-  background-color: #fff;
-  /*background-image: url(/public/img/bg_grid.jpg);*/
-  height: 100%;
-  padding-top: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
-  text-align: center;
-  /*box-shadow: inset -15px 0 20px -15px #77AEF4;*/
+    /*background-color: #1f2c39;*/
+    background-color: #fff;
+    /*background-image: url(/public/img/bg_grid.jpg);*/
+    height: 100%;
+    padding-top: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
+    text-align: center;
+    /*box-shadow: inset -15px 0 20px -15px #77AEF4;*/
 }
+
 .aside1 > .nav > li > a {
-  padding-left: 0px;
-  padding-right: 0px;
-  border-radius: 0px;
-  color: #000;
-  font-size: 15px;
-  padding: 10px 10px;
-
-}
-.aside1> .nav > li > a:hover {
-  /*color:#fff;*/
-  /*background-color: #14AA57;*/
-  text-decoration: underline;
-
-  /*background-color: #57CB80;*/
+    padding-left: 0px;
+    padding-right: 0px;
+    border-radius: 0px;
+    color: #000;
+    font-size: 15px;
+    padding: 10px 10px;
 
 }
 
-.aside1 > .nav-pills>li.active>a ,.nav-pills>li.active>a:hover,.nav-pills>li.active>a:focus {
-  /*color: #fff;*/
-  /*background-color: #fafaf6;*/
-  /*background-image: url(/public/img/body_bg.jpg);*/
-  /*background-color: #D1D4D7;*/
+.aside1 > .nav > li > a:hover {
+    /*color:#fff;*/
+    /*background-color: #14AA57;*/
+    text-decoration: underline;
+
+    /*background-color: #57CB80;*/
+
 }
+
+.aside1 > .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+    /*color: #fff;*/
+    /*background-color: #fafaf6;*/
+    /*background-image: url(/public/img/body_bg.jpg);*/
+    /*background-color: #D1D4D7;*/
+}
+
 ul.nav.nav-pills.nav-stacked {
     margin: auto;
 }
+
 .avatar {
-  width: 80px;
-  border: 2px solid #000;
-  margin: 20px 0 20px 0;
+    width: 80px;
+    border: 2px solid #000;
+    margin: 20px 0 20px 0;
 }
+
 .aside1_bottom {
-  width: 100%;
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
 }
+
 .aside1_bottom > .table {
-  /*margin-bottom: 75px;*/
+    /*margin-bottom: 75px;*/
 }
+
 /* 中部目录栏 */
 .aside2 {
-  background-color: #fff;
-  /*background-image: url(/public/img/body_bg.jpg);*/
-  height: 100%;
-  overflow-y: auto;
-  font-color: #fff;
-  padding-top: 20px;
-  /*padding-right: 30px;*/
+    background-color: #fff;
+    /*background-image: url(/public/img/body_bg.jpg);*/
+    height: 100%;
+    width: 70%;
+    margin-left: 10px;
+    overflow-y: auto;
+    font-color: #fff;
+    padding-top: 20px;
+    /*padding-right: 30px;*/
 }
+
 .navside2 {
-  /*margin-top: 60px;*/
+    /*margin-top: 60px;*/
 }
+
 h4.panel-title {
-  color: white;
+    color: white;
 }
+
 /* 右侧内容栏 */
 .aside3 {
-  height: 100%;
-  overflow-y: auto;
-  background-color: #fff;
-  /*background-image: url(/public/img/bg_lines1.jpg);*/
+    height: 100%;
+    overflow-y: auto;
+    background-color: #fff;
+    /*background-image: url(/public/img/bg_lines1.jpg);*/
 }
+
+.selected-tag {
+    color: #777;
+    margin-right: 10px;
+    font-weight: 700;
+    font-size: 17px;
+}
+
 .aside3-title {
-/*  background-color: #f5f5f5;*/
-  /*background-image: url(/public/img/body_bg.jpg);*/
-  padding-left: 30px;
-  padding-right: 30px;
-  text-align: center;
-  color: #747778;
+    /*  background-color: #f5f5f5;*/
+    /*background-image: url(/public/img/body_bg.jpg);*/
+    padding-left: 30px;
+    padding-right: 30px;
+    text-align: center;
+    color: #747778;
 }
+
 .aside3-date {
-  margin-bottom: 10px;
-  border-bottom: 1px solid #eee;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #eee;
 }
+
 .aside3-content {
-  /*margin-bottom: 60px;*/
-  padding-left: 30px;
-  padding-right: 30px;
-  color: #444443;
+    /*margin-bottom: 60px;*/
+    padding-left: 30px;
+    padding-right: 30px;
+    color: #444443;
 }
+
 #pjax .row {
-  margin-top: 0px;
+    margin-top: 0px;
 }
+
 #content {
-  /*font-size: 18px;*/
-  /*line-height: 1.8;*/
+    /*font-size: 18px;*/
+    /*line-height: 1.8;*/
 }
+
 #content h2, h3 {
-  line-height: 2;
+    line-height: 2;
 }
+
 blockquote p {
-  /*color: #95a5a6;*/
-  /*font-size: 20px;*/
+    /*color: #95a5a6;*/
+    /*font-size: 20px;*/
 }
+
 /* 其他配置 */
 .center {
-  text-align: center;
+    text-align: center;
 }
-.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
-  color: #fff;
-  background-color: #000;
-  /*text-decoration: underline;*/
+
+.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+    color: #fff;
+    background-color: #000;
+    /*text-decoration: underline;*/
 }
+
 /* 显示评论按钮 */
 .show-commend {
-  width: 100%;
-  margin-bottom: 10px;
+    width: 100%;
+    margin-bottom: 10px;
 }
