[#12] - Release 0x06: Finished post content render and route for post link.

--- a/app/components/note/aside2/aside2.html
+++ b/app/components/note/aside2/aside2.html
@@ -1,7 +1,7 @@
 <div class="tab-pane" id="{{ $ctrl.selectedCategory }}">
     <div class="list-group">
         <div ng-repeat="post in $ctrl.posts">
-            <a ng-href="#{{ selectedCategory }}{{ post.id }}" class="list-group-item-lay">{{ post.title }}</a>
+            <a ng-href="#note/{{ $ctrl.selectedCategory }}{{ post.url }}" class="list-group-item-lay">{{ post.title }}</a>
         </div>
     </div>
 </div>
