--- a/style/base.css
+++ b/style/base.css
@@ -138,7 +138,7 @@ h4.panel-title {
 }
 
 .aside3-content {
-    /*margin-bottom: 60px;*/
+    margin-bottom: 60px;
     padding-left: 30px;
     padding-right: 30px;
     color: #444443;
