--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -11,7 +11,7 @@
         <a href="#note" class="link">note</a>
         <a ng-link="dashboard" class="link">dashboard</a>
         <a ui-sref="users2" class="link">users</a>
-        <a href="https://github.com/JimmyLv/blog-github-api-angular" class="link" target="_blank">github</a>
+        <a href="https://github.com/JimmyLv/nobackend.website" class="link" target="_blank">github</a>
     </div>
     <div class="menu">
         <input autocomplete="off" class="default-search" name="keyword" placeholder="搜索最美博客" type="text">
