--- a/app/components/note/note.html
+++ b/app/components/note/note.html
@@ -14,16 +14,12 @@
 </div>
 
 <div class="col-md-8 col-lg-8 col-sm-12 col-xs-12 aside3">
-    <page ng-if="!$ctrl.isIndex" page-content="$ctrl.postContent"></page>
+    <content ng-if="!$ctrl.isIndex" page-content="$ctrl.postContent"></content>
 
     <aside3 ng-if="$ctrl.isIndex"
             newest="$ctrl.siteConfig.locals.newest"
             tags-with-posts="$ctrl.selectedTagsWithPosts"
-            selected-category="$ctrl.selectedCategory">
-        <newest-posts>
-            <post-link posts="$ctrl.index.paginator">
-                <date></date>
-            </post-link>
-        </newest-posts>
+            selected-category="$ctrl.selectedCategory"
+            newest-paginator="$ctrl.index.paginator">
     </aside3>
 </div>
