[#13] - Change to use ui.router and some refactoring.

--- a/app/components/hello/hello.html
+++ b/app/components/hello/hello.html
@@ -1,4 +1,4 @@
 <div>
-    <div>{{ $ctrl.name }} love {{ $ctrl.girlFriend }}!</div>
-    <button ng-click="$ctrl.sayHi()">Hello</button>
+    <div>{{ hello.name }} love {{ hello.girlFriend }}!</div>
+    <button ng-click="hello.sayHi()">Hello</button>
 </div>
