[#14] - Release 0x05: Remove useless route logic and make app single page performance.

--- a/app/components/note/content/content.html
+++ b/app/components/note/content/content.html
@@ -6,7 +6,8 @@
             </div>
         </div>
         <div class="col-md-12 aside3-content">
-            <div id="content" marked="$ctrl.content"></div>
+            <div id="page-content" marked="$ctrl.content"></div>
+            <hr>
         </div>
         <!-- 目录 -->
         <div id="content_table" style="position:fixed;right:20px;top:120px;display:none;">
