[#14] - Fixed unsupported lang when hightlight code and change style.

--- a/app/components/note/note.html
+++ b/app/components/note/note.html
@@ -17,7 +17,7 @@
     <content ng-if="!$ctrl.isIndex" page-content="$ctrl.postContent"></content>
 
     <aside3 ng-if="$ctrl.isIndex"
-            newest="$ctrl.siteConfig.locals.newest"
+            newest="$ctrl.config.locals.newest"
             tags-with-posts="$ctrl.selectedTagsWithPosts"
             selected-category="$ctrl.selectedCategory"
             newest-paginator="$ctrl.index.paginator">
