--- a/app/components/note/content/content.html
+++ b/app/components/note/content/content.html
@@ -8,6 +8,7 @@
         <div class="col-md-12 aside3-content">
             <div id="page-content" marked="$ctrl.content"></div>
             <hr>
+            <dir-disqus config="$ctrl.disqusConfig"></dir-disqus>
         </div>
         <!-- 目录 -->
         <div id="content_table" style="position:fixed;right:20px;top:120px;display:none;">
