--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -5,10 +5,10 @@
         </a>
     </div>
     <div class="top-bar">
-        <a href="#hello" class="link" active>hello</a>
-        <a href="#zuimeia" class="link">zuimeia</a>
-        <a href="#jekyll" class="link">jekyll</a>
-        <a href="#note" class="link">note</a>
+        <a href="#!/hello" class="link" active>hello</a>
+        <a href="#!/zuimeia" class="link">zuimeia</a>
+        <a href="#!/jekyll" class="link">jekyll</a>
+        <a href="#!/note" class="link">note</a>
         <a ng-link="dashboard" class="link">dashboard</a>
         <a ui-sref="users2" class="link">users</a>
         <a href="https://github.com/JimmyLv/nobackend.website" class="link" target="_blank">github</a>
