--- a/app/components/note/note.html
+++ b/app/components/note/note.html
@@ -1,4 +1,6 @@
-<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12 aside visible-md visible-lg">
+<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12 aside"
+     ng-class="{ 'hidden-md': !$ctrl.showNav, 'visible-md': $ctrl.showNav,
+     'hidden-lg': !$ctrl.showNav, 'visible-lg': $ctrl.showNav }">
     <div class="row navside">
         <aside1 selected-category="$ctrl.selectedCategory" categories="$ctrl.index.categories"
                 site-config="$ctrl.config"></aside1>
@@ -14,7 +16,7 @@
 </div>
 
 <div class="col-md-8 col-lg-8 col-sm-12 col-xs-12 aside3">
-    <content ng-if="!$ctrl.isIndex" page-content="$ctrl.postContent"></content>
+    <content ng-if="!$ctrl.isIndex" page-content="$ctrl.postContent" show-toc="$ctrl.showToc"></content>
 
     <aside3 ng-if="$ctrl.isIndex"
             newest="$ctrl.config.locals.newest"
