--- a/app/components/note/note.html
+++ b/app/components/note/note.html
@@ -15,7 +15,7 @@
     </div>
 </div>
 
-<div class="col-md-8 col-lg-8 col-sm-12 col-xs-12 aside3">
+<div class="col-md-8 col-lg-8 col-sm-12 col-xs-12 aside3" ng-class="{'content-center': !$ctrl.showNav}">
     <content ng-if="!$ctrl.isIndex" page-content="$ctrl.postContent" show-toc="$ctrl.showToc"></content>
 
     <aside3 ng-if="$ctrl.isIndex"
