--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,20 +1,20 @@
-<header>
+<header id="header">
     <div class="logo">
         <a href="http://blog.jimmylv.info" target="_blank" title="立青作品">
-            <img src="images/avatar.jpg"/>
+            <img ng-src="images/avatar.jpg"/>
         </a>
     </div>
     <div class="top-bar">
-        <a href="#!/hello" class="link" active>hello</a>
-        <a href="#!/zuimeia" class="link">zuimeia</a>
-        <a href="#!/jekyll" class="link">jekyll</a>
-        <a href="#!/note" class="link">note</a>
-        <a ng-link="dashboard" class="link">dashboard</a>
-        <a ui-sref="users2" class="link">users</a>
-        <a href="https://github.com/JimmyLv/nobackend.website" class="link" target="_blank">github</a>
+        <a href="#!/hello" class="link no-mobile">Hello</a>
+        <a ng-href="#!/zuimeia" class="link">Apps</a>
+        <a ng-href="#!/jekyll" class="link no-mobile">Jekyll</a>
+        <a ng-href="#!/note" class="link active">Blog</a>
+        <a ng-link="dashboard" class="link no-mobile">Dashboard</a>
+        <a ui-sref="users2" class="link no-mobile">Users</a>
+        <a href="https://github.com/JimmyLv/nobackend.website" class="link" target="_blank">GitHub</a>
     </div>
     <div class="menu">
-        <input autocomplete="off" class="default-search" name="keyword" placeholder="搜索最美博客" type="text">
+        <input autocomplete="off" class="default-search no-mobile" name="keyword" placeholder="搜索最美博客" type="text">
         <input class="search-icon" id="btn-search" type="button">
         <input type="checkbox" id="cb-random"><label for="cb-random">&nbsp;随机</label>
     </div>
