[#16] - Move two nav buttons into note template and add iframe for pages.

--- a/app/components/note/note.html
+++ b/app/components/note/note.html
@@ -25,3 +25,11 @@
             newest-paginator="$ctrl.index.paginator">
     </aside3>
 </div>
+
+<button id="nav-btn" class="btn btn-primary" ng-click="$ctrl.toggleNav()">
+    <i class="fa fa-lg fa-navicon"></i>
+</button>
+
+<button id="content-btn" class="btn btn-primary" ng-click="$ctrl.toggleTOC()">
+    <i class="fa fa-lg fa-plus"></i>
+</button>
