--- a/app/components/note/aside1/aside1.html
+++ b/app/components/note/aside1/aside1.html
@@ -4,9 +4,9 @@
         <li ng-repeat="category in $ctrl.categories" ng-class="category.name === $ctrl.selectedCategory ? 'active': ''">
             <a ng-href="#!/note/{{ category.name }}" data-toggle="tab">{{ category.name }}</a>
         </li>
-        <li><a ng-href="#!/tags" data-toggle="tab">{{ $ctrl.config.locals.tags }}</a></li>
-        <li><a ng-href="#!/archive">{{ $ctrl.config.locals.archive }}</a></li>
-        <li><a ng-href="#!/about">{{ $ctrl.config.locals.about }}</a></li>
+        <li><a ng-href="#!/pages/tags" data-toggle="tab">{{ $ctrl.config.locals.tags }}</a></li>
+        <li><a ng-href="#!/pages/archive">{{ $ctrl.config.locals.archive }}</a></li>
+        <li><a ng-href="#!/pages/about">{{ $ctrl.config.locals.about }}</a></li>
     </ul>
     <div class="aside1-bottom">
         <a ng-href="http://blog.jimmylv.info/pages/atom.xml" target="_blank">
