[#16] - Add lofter website iframe to show photos.

--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -5,12 +5,13 @@
         </a>
     </div>
     <div class="top-bar">
-        <a href="#!/hello" class="link no-mobile">Hello</a>
-        <a ng-href="#!/zuimeia" class="link">Apps</a>
-        <a ng-href="#!/jekyll" class="link no-mobile">Jekyll</a>
-        <a ng-href="#!/note" class="link active">Blog</a>
-        <a ng-link="dashboard" class="link no-mobile">Dashboard</a>
-        <a ui-sref="users2" class="link no-mobile">Users</a>
+        <a ng-href="#!/hello" class="link no-mobile">hello</a>
+        <a ng-href="#!/zuimeia" class="link no-mobile">apps</a>
+        <a ng-href="#!/jekyll" class="link no-mobile">jekyll</a>
+        <a ng-href="#!/note" class="link active">blog</a>
+        <a ng-href="#!/photos" class="link">photos</a>
+        <a ng-link="dashboard" class="link no-mobile">dashboard</a>
+        <a ui-sref="users2" class="link no-mobile">users</a>
         <a href="https://github.com/JimmyLv/nobackend.website" class="link" target="_blank">GitHub</a>
     </div>
     <div class="menu">
