--- a/style/base.css
+++ b/style/base.css
@@ -228,6 +228,7 @@ blockquote p {
 
 #content-btn {
     position: fixed;
+    width: 42px;
     right: 15px;
     top: 113px;
 }
@@ -236,6 +237,39 @@ blockquote p {
     color: #fff;
     background-color: #000;
     border-color: #fff;
+}
+
+.search-results {
+    max-height: 180px;
+    overflow-y: scroll;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+    margin-bottom: 7px;
+}
+
+table#search-text-results {
+    position: relative;
+    width: 100%;
+    white-space: nowrap;
+    font-size: 13px;
+    color: #000;
+    background-color: #fff;
+    border-collapse: collapse;
+    margin-bottom: 0;
+}
+
+.cancel-search {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    -webkit-background-size: 20px;
+    -o-background-size: 20px;
+    border: 0;
+    vertical-align: middle;
+    margin-right: 25px
+}
+
+.random-post {
+    cursor: pointer;
 }
 
 @media screen and (max-width: 767px) {
