[#17] - Hide photos from header menu.

--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -9,7 +9,7 @@
         <a ng-href="#!/zuimeia" class="link no-mobile">apps</a>
         <a ng-href="#!/jekyll" class="link no-mobile">jekyll</a>
         <a ng-href="#!/note" class="link active">blog</a>
-        <a ng-href="#!/photos" class="link">photos</a>
+        <a ng-href="#!/photos" class="link no-mobile">photos</a>
         <a ng-link="dashboard" class="link no-mobile">dashboard</a>
         <a ui-sref="users2" class="link no-mobile">users</a>
         <a href="https://github.com/JimmyLv/nobackend.website" class="link" target="_blank">GitHub</a>
