--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -5,14 +5,14 @@
         </a>
     </div>
     <div class="top-bar">
-        <a ng-href="#!/hello" class="link no-mobile">hello</a>
-        <a ng-href="#!/zuimeia" class="link no-mobile">apps</a>
-        <a ng-href="#!/jekyll" class="link no-mobile">jekyll</a>
-        <a ng-href="#!/note" class="link active">blog</a>
-        <a ng-href="#!/photos" class="link no-mobile">photos</a>
-        <a ng-link="dashboard" class="link no-mobile">dashboard</a>
-        <a ui-sref="users2" class="link no-mobile">users</a>
-        <a href="https://github.com/JimmyLv/nobackend.website" class="link" target="_blank">GitHub</a>
+        <a ng-href="#!/hello" class="link no-mobile">HELLO</a>
+        <a ng-href="#!/zuimeia" class="link no-mobile">APPS</a>
+        <a ng-href="#!/jekyll" class="link no-mobile">JEKYLL</a>
+        <a ng-href="#!/note" class="link active">BLOG</a>
+        <a ng-href="#!/photos" class="link no-mobile">PHOTOS</a>
+        <a ng-link="dashboard" class="link no-mobile">DASHBOARD</a>
+        <a ui-sref="users2" class="link no-mobile">USERS</a>
+        <a href="https://github.com/JimmyLv/nobackend.website" class="link" target="_blank">GITHUB</a>
     </div>
     <div class="menu">
         <input autocomplete="off" class="default-search no-mobile" ng-model="main.searchText" name="keyword"
