[#17] - Limited to show only newest 10 post in home page.

--- a/app/components/note/aside3/aside3.html
+++ b/app/components/note/aside3/aside3.html
@@ -18,7 +18,7 @@
         <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">{{ $ctrl.newest }}</div>
-                <post-link posts="$ctrl.paginator"
+                <post-link posts="$ctrl.newestPosts"
                            selected-category="$ctrl.selectedCategory">
                 </post-link>
             </div>
